# recon

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tox.yml
recon/: __main__.py  cli.py  main.py  reconcile.py
tests/: test_main.py  test_reconcile.py
