[project]
name = "recon"
version = "0.0.1"
authors = [
  { name="Mynhardt Burger", email="mynhardt+recon@gmail.com" },
]
description = "A tool to reconcile sets of transactional data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Homepage" = "https://github.com/mynhardtburger/recon"

[tool.isort]
profile = "black"
